--- a/styles/style.css
+++ b/styles/style.css
@@ -1,182 +1,254 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Roboto+Mono:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Roboto+Mono:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
-html{
-    scroll-behavior: smooth;
-}
-
-body{
-    background-image: url("/media/back2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: whitesmoke;
-    font-size: 24px;
-}
-.container{
-    margin: auto;
-    height: 100vh;
-    width: 100%;
+html {
+  scroll-behavior: smooth;
 }
 
-
-img{
-    width: 100%;
-    height: auto;
+body {
+  background-color: black;
+  color: whitesmoke;
+  font-size: 24px;
 }
-.navbar ul  {
-    display: flex;
-    list-style: none;
-    padding: 5px;
-    font-family: 'Merriweather', serif;
-    background-color: rgba(0, 0, 0, 0.609);
+.container {
+  margin: auto;
+  height: 100vh;
+  width: 100%;
+}
+.web-dev {
+  color: orangered;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+.navbar ul {
+  display: flex;
+  list-style: none;
+  padding: 5px;
+  font-family: "Merriweather", serif;
+  background-color: rgba(0, 0, 0, 0.609);
 }
 .navbar a {
-    text-decoration: none;
-    color: whitesmoke;
+  text-decoration: none;
+  color: whitesmoke;
 }
-.skills{
-    margin-left: 57%;
+.skills {
+  margin-left: 57%;
 }
-.about, .contact{
-    margin-left: 5%;
+.about,
+.contact {
+  margin-left: 5%;
 }
-.center{
-    font-family: 'Roboto Mono', monospace;
-    text-align: center;
-    margin-top: 7%; 
-    
+.center {
+  font-family: "Roboto Mono", monospace;
+  text-align: center;
+  margin-top: 7%;
 }
-h1{
-    padding-bottom: 1%;
-    font-weight: 400;
+h1 {
+  padding-bottom: 1%;
+  font-weight: 400;
 }
-.center h2{
-    margin: auto;
-    width: 13ch;
-    font-weight: 300;
-    animation: typewriter 2s steps(45);
-    white-space: nowrap;
-    overflow: hidden;
-    
+.center h2 {
+  margin: auto;
+  width: 13ch;
+  font-weight: 300;
+  animation: typewriter 2s steps(45);
+  white-space: nowrap;
+  overflow: hidden;
 }
-.sticky{
-    position: fixed;
-    top: 0;
-    width: 100%;
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-.icons{
-    margin-bottom: 13%;
+.icons {
+  margin-bottom: 13%;
 }
 .icons ul {
-    display: flex;
-    justify-content: center;
-    margin-top: 3%;
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
 }
-.icons li{
-    list-style: none;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.icons a{
-    text-decoration: none;
-    color: whitesmoke;
-    font-size: 2em;
-}
-.arrow{
-    color: whitesmoke;
-    font-size: 2em;
-    text-align: center;
-    animation-duration: 1s;
-    animation-name: slidedown ;
-    animation-iteration-count: infinite;
+.icons li {
+  list-style: none;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.arrow a{
-    color: whitesmoke;
+.icons a {
+  text-decoration: none;
+  color: whitesmoke;
+  font-size: 2em;
+}
+.arrow {
+  color: whitesmoke;
+  font-size: 2em;
+  text-align: center;
+  animation-duration: 1s;
+  animation-name: slidedown;
+  animation-iteration-count: infinite;
+}
+
+.arrow a {
+  color: whitesmoke;
 }
 
 footer {
+  display: flex;
+  justify-content: center;
+  height: 47%;
+  align-items: flex-end;
+}
+
+.icons a:hover {
+  color: teal;
+}
+
+.icons li:hover {
+  transform: translateY(-1.5px);
+}
+
+.arrow a :hover {
+  color: teal;
+}
+.container2 {
+  height: 50vh;
+  width: 900px;
+  margin: auto;
+}
+
+.projects {
+  display: grid;
+  margin-bottom: 50px;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 110px;
+  width: 1440px;
+  margin: auto;
+  justify-items: center;
+  
+}
+h1 {
+  text-align: center;
+  margin-bottom: 25px;
+}
+.item {
+  height: 250px;
+  width: 300px;
+  position: relative;
+  
+}
+.overlay{
+    font-family: 'Quicksand', sans-serif;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color:whitesmoke;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.713);
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    height: 47%;
-    align-items: flex-end;
- }
- 
- .icons a:hover{
-     color: teal;
-     }
-
-.icons li:hover{ 
-    transform: translateY(-1.5px);
-   
-    }
-
-.arrow a :hover{
-    color: teal;
-     
-}
-.container2{
-    height: 50vh;
-}
-
-#section2 h1{
     text-align: center;
-    margin-top: 15%;
-}
-.navbar li a:hover{
-    color: tomato;
-    border-bottom: 4px solid tomato;
-}
-#skills-section{
-    height: 50vh;
-}
-#skills-section h2{
-    margin-bottom: 5%;
-    text-align: center;
-    color: whitesmoke;
-    box-shadow: inset 0 0 11px whitesmoke;
+    opacity: 0;
+    transition: opacity 0.25s ;
     
+    
+}
 
+.item:hover .overlay{
+    opacity: 1;
 }
-.skills-list{
-    display: flex;
-    font-size: 3em;
-    justify-content: space-around;
-    padding-left: 15%;
-    padding-right: 15%;
-    list-style: none;
-    color: tomato;
+
+.item img {
+  height: 250px;
+  width: 300px;
 }
-.css-icon{
-    color: rgb(12, 9, 216);
+.item4 {
+  grid-row: 2/2;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
-.js-icon{
-    color: black;
+.item5 {
+  grid-row: 2/2;
+  grid-column-start: 2;
+  grid-column-end: 4;
 }
-.react-icon{
-    color: rgb(30, 106, 149);
+
+/* .item5{
+    margin-left: 329px;
+} */
+/* a{
+    height: 200px; 
+    width: 300px;
+    
+} */
+
+#section2 h1 {
+  text-align: center;
+  margin-top: 15%;
+}
+
+#section2 p {
+  text-align: center;
+}
+
+.navbar li a:hover {
+  color: tomato;
+  border-bottom: 4px solid tomato;
+}
+#skills-section {
+  height: 50vh;
+}
+#skills-section h1 {
+  margin-top: 150px;
+  margin-bottom: 69px;
+  text-align: center;
+  color: whitesmoke;
+}
+#skills-section a {
+  text-decoration: none;
+  color: rgb(182, 42, 17);
+}
+.skills-list {
+  display: flex;
+  font-size: 3em;
+  justify-content: space-around;
+  padding-left: 15%;
+  padding-right: 15%;
+  list-style: none;
+  color: whitesmoke;
+}
+.css-icon {
+  color: rgb(12, 9, 216);
+}
+.js-icon {
+  color: whitesmoke;
+}
+.react-icon {
+  color: rgb(30, 106, 149);
 }
 
 @keyframes slidedown {
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(10px);
-    }
-    
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
 }
 
 @keyframes typewriter {
-    from{
-        width: 0;
-    }
-    
+  from {
+    width: 0;
+  }
 }
-
