--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ nav ul {
   justify-content: end;
   
 }
+
 nav a {
   text-decoration: none;
   color: whitesmoke;
@@ -44,10 +45,9 @@ nav a {
 .center {
   font-family: "Roboto Mono", monospace;
   text-align: center;
-  margin-top: 13%;
+  padding-top: 13%;
 }
 h1 {
-  padding-bottom: 1%;
   font-weight: 400;
 }
 .center h2 {
@@ -193,7 +193,13 @@ h1 {
   text-align: center;
   margin-top: 15%;
 }
-
+.project-heading{
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+.projects img{
+  border-radius: 11px;
+}
 #section2 p {
   text-align: center;
 }
@@ -204,6 +210,7 @@ nav li a:hover {
 }
 #skills-section {
   height: fit-content;
+  margin-top: 10%;
 }
 /* #skills-section h1 {
   margin-top: 150px;
@@ -243,7 +250,7 @@ span{
 .bio{
   width: 51%;
   margin:auto;
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 span{
   color: orangered;
